[metadata]
name = conser
version = attr: conser.__version__
author = Logan Smith
author_email = logan.smith@alces-software.com
url = https://github.com/alces-flight/concertim-openstack-service
description = The main service package for facilitating communication between Openstack and Alces Flight Concertim
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Environment :: OpenStack

[options]
zip_safe = False
packages=find:
python_requires = >=3.7
install_requires =
    gnocchiclient <= 7.0.7
    keystoneauth1 <= 4.5.0
    python-keystoneclient <= 4.4.0
    python-heatclient <= 2.5.1
    python-ceilometerclient <= 2.9.0
    python-openstackclient <= 5.8.0
    Werkzeug==2.3.7 
    Flask <= 2.0.3
    pika <= 1.3.1

[options.entry_points]
console_scripts =
    cli-name = conser.shell:main

[options.packages.find]
exclude =
    Dockerfiles*
    docs*
    etc*
    release*
    conser/tests*